# prawcore

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  SECURITY.md  pre_push.py  pre_push.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  pre-commit_autoupdate.yml  prepare_release.yml  pypi.yml  scorecard.yml  scorecards-analysis.yml  tag_release.yml
docs/: conf.py  index.rst
docs/code_overview/: authentication.rst  exceptions.rst  other.rst  requestor.rst  sessions.rst
examples/: caching_requestor.py  device_id_auth_trophies.py  obtain_refresh_token.py  read_only_auth_trophies.py  script_auth_friend_list.py
prawcore/: __init__.py  auth.py  const.py  exceptions.py  rate_limit.py  requestor.py  sessions.py  util.py
prawcore/_async/: __init__.py  auth.py  rate_limit.py  requestor.py  sessions.py
tests/: __init__.py  config.py  conftest.py  test_authenticator.py  test_authorizer.py  test_rate_limit.py  test_requestor.py  test_sessions.py  utils.py
tests/cassettes/: Authenticator_revoke_token__with_access_token_hint.json  Authenticator_revoke_token__with_refresh_token_hint.json  Authorizer_authorize__with_invalid_code.json  Authorizer_authorize__with_permanent_grant.json  Authorizer_authorize__with_temporary_grant.json  Authorizer_refresh.json  Authorizer_refresh__with_invalid_token.json  Authorizer_revoke__access_token_with_refresh_set.json  Authorizer_revoke__access_token_without_refresh_set.json  Authorizer_revoke__refresh_token_with_access_set.json  Authorizer_revoke__refresh_token_without_access_set.json  DeviceIDAuthorizer_refresh__with_scopes.json  DeviceIDAuthorizer_refresh__with_short_device_id.json  ScriptAuthorizer_refresh.json  ScriptAuthorizer_refresh__with_invalid_username_or_password.json  ScriptAuthorizer_refresh__with_scopes.json  ScriptAuthorizer_refresh_with__valid_otp.json  Session_request.json  Session_request__accepted.json  Session_request__bad_json.json  Session_request__bad_request.json  Session_request__cloudflair_connection_timed_out.json  Session_request__forbidden.json  Session_request__not_found.json  Session_request__patch.json  Session_request__post.json  Session_request__service_unavailable.json  Session_request__too__many_requests__without_retry_headers.json  Session_request__too_large.json  Session_request__unavailable_for_legal_reasons.json  Session_request__uri_too_long.json  Session_request__with_insufficient_scope.json  Session_request__with_invalid_access_token.json  Session_request__with_invalid_access_token__retry.json  TrustedAuthenticator_revoke_token.json  TrustedAuthenticator_revoke_token__with_access_token_hint.json  UntrustedAuthenticator_revoke_token.json
tests/integration/: __init__.py  test_authenticator.py  test_authorizer.py  test_sessions.py
tests/integration/asynchronous/: __init__.py  test_authenticator.py  test_authorizer.py  test_sessions.py
tests/integration/cassettes/: Authorizer_authorize__with_permanent_grant.json  Authorizer_revoke__refresh_token_without_access_set.json  DeviceIDAuthorizer_refresh.json  ReadOnlyAuthorizer_refresh__with_scopes.json  ScriptAuthorizer_refresh__with_invalid_otp.json  ScriptAuthorizer_refresh__with_invalid_username_or_password.json  Session_request__bad_gateway.json  Session_request__created.json  Session_request__get.json  Session_request__internal_server_error.json  Session_request__no_content.json  Session_request__okay_with_0_byte_content.json  Session_request__patch.json  Session_request__redirect.json  Session_request__redirect_301.json  Session_request__too__many_requests__with_retry_headers.json  TestAuthorizer.test_authorize__with_invalid_code.json  TestAuthorizer.test_authorize__with_permanent_grant.json  TestAuthorizer.test_authorize__with_temporary_grant.json  TestAuthorizer.test_refresh.json  TestAuthorizer.test_refresh__with_invalid_token.json  TestAuthorizer.test_revoke__access_token_with_refresh_set.json  TestAuthorizer.test_revoke__access_token_without_refresh_set.json  TestAuthorizer.test_revoke__refresh_token_with_access_set.json  TestAuthorizer.test_revoke__refresh_token_without_access_set.json  TestDeviceIDAuthorizer.test_refresh.json  TestDeviceIDAuthorizer.test_refresh__with_scopes_and_trusted_authenticator.json  TestDeviceIDAuthorizer.test_refresh__with_short_device_id.json  TestReadOnlyAuthorizer.test_refresh.json  TestReadOnlyAuthorizer.test_refresh__with_scopes.json  TestScriptAuthorizer.test_refresh.json  TestScriptAuthorizer.test_refresh__with_invalid_otp.json  TestScriptAuthorizer.test_refresh__with_invalid_username_or_password.json  TestScriptAuthorizer.test_refresh__with_scopes.json  TestScriptAuthorizer.test_refresh__with_valid_otp.json  TestSession.test_request__accepted.json  TestSession.test_request__bad_gateway.json  TestSession.test_request__bad_json.json  TestSession.test_request__bad_request.json  TestSession.test_request__cloudflare_connection_timed_out.json  (+31 more)
tests/unit/: __init__.py  test_authenticator.py  test_authorizer.py  test_rate_limit.py  test_requestor.py  test_sessions.py
tests/unit/asynchronous/: test_authenticator.py  test_authorizer.py  test_rate_limit.py  test_requestor.py  test_sessions.py
tools/: generate_async.py  set_version.py
