[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "tox-uv>=1.35.2"
]
docs = [
  "furo",
  "sphinx",
  "sphinx-autodoc-typehints"
]
lint = [
  "pre-commit",
  "ruff>=0.15.17"
]
test = [
  "coverage>=7.14.1",
  "pytest>=9.0.3",
  "vcrpy>=8.1.1"
]
type = [
  "pyright>=1.1.410",
  {include-group = "test"}
]

[project]
authors = [{email = "bbzbryce@gmail.com", name = "Bryce Boe"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed"
]
dependencies = [
  "requests>=2.34.2,<3.0"
]
description = "Low-level communication layer for PRAW 4+."
dynamic = ["version"]
keywords = ["praw", "reddit", "api"]
license = {file = "LICENSE.txt"}
maintainers = [
  {email = "bbzbryce@gmail.com", name = "Bryce Boe"},
  {email = "lilspazjoekp@gmail.com", name = "Joel Payne"}
]
name = "prawcore"
readme = "README.rst"
requires-python = ">=3.10"

[project.urls]
"Documentation" = "https://prawcore.readthedocs.io/"
"Issue Tracker" = "https://github.com/praw-dev/prawcore/issues"
"Source Code" = "https://github.com/praw-dev/prawcore"

[tool.coverage.report]
exclude_lines = [
  "@abstract",
  "@overload",
  "if TYPE_CHECKING:",
  "pragma: no cover"
]
fail_under = 100

[tool.hatch.version]
path = "prawcore/__init__.py"

[tool.pyright]
include = ["prawcore"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
include = ["*.py"]
line-length = 120
preview = true

[tool.ruff.lint]
ignore = [
  "A002", # shadowing built-in
  "ANN202", # missing return type for private method
  "C901", # function is too complex
  "COM812", # trailing comma missing (conflicts with the formatter)
  "CPY001", # missing copyright notice
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "DOC201", # `return` not documented in docstring
  "DOC402", # `yield` not documented in docstring
  "DOC501", # `raise` not documented in docstring
  "E501", # line-length
  "ISC001", # single-line implicit string concatenation (conflicts with the formatter)
  "PLR0913", # too many arguments
  "RUF067", # `__init__` module should only contain docstrings and re-exports
  "SLF001" # private member accessed (pyright's reportPrivateUsage covers source)
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"docs/conf.py" = ["A001", "D100", "DTZ002", "INP001"]
"examples/*.py" = ["ANN", "ARG", "D", "INP", "PLR", "S", "T20"]
"tests/**/*.py" = [
  "A", # builtin shadowing
  "ANN", # type annotations
  "ARG", # unused arguments (pytest fixtures)
  "B", # bugbear (asserts attribute access, loop vars)
  "C4", # comprehensions
  "D", # docstrings
  "DTZ", # naive datetimes
  "EM", # exception message strings
  "ERA", # commented-out code
  "FBT", # boolean traps
  "FIX", # TODO/FIXME comments
  "INP", # implicit namespace package
  "ISC", # implicit string concatenation
  "N", # naming
  "PLC", # pylint convention
  "PLR", # pylint refactor (no-self-use, magic values, self-comparison)
  "PLW", # pylint warning
  "PT", # pytest style
  "PTH", # use pathlib
  "PYI", # stub-only rules
  "RET", # unnecessary assignment before return
  "RSE", # raise
  "RUF", # ruff-specific
  "S", # bandit (assert, pickle, hardcoded secrets)
  "SIM", # simplify
  "SLF", # private member access
  "T20", # print
  "TID", # relative imports
  "TRY", # tryceratops (long exception messages)
  "UP" # pyupgrade (percent formatting)
]

[tool.tomlsort]
sort_inline_tables = true
sort_table_keys = true

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "py314", "docs", "pre-commit", "type"]
minversion = "4.22"

[tool.tox.env.docs]
base_python = ["py314"]
commands = [
  ["sphinx-build", "-W", "--keep-going", "-n", "docs/", "{env_tmp_dir}/html"]
]
dependency_groups = ["docs"]
description = "build docs with sphinx"
runner = "uv-venv-lock-runner"

[tool.tox.env.linkcheck]
base_python = ["py314"]
commands = [
  ["sphinx-build", "--keep-going", "-b", "linkcheck", "docs/", "{env_tmp_dir}/linkcheck"]
]
dependency_groups = ["docs"]
description = "check documentation for broken external links"
runner = "uv-venv-lock-runner"

[tool.tox.env.pre-commit]
commands = [
  ["pre-commit", "run", "--all-files"]
]
dependency_groups = ["lint"]
description = "run pre-commit on code base"
pass_env = ["SKIP"]
runner = "uv-venv-lock-runner"

[tool.tox.env.type]
commands = [["pyright"]]
dependency_groups = ["type"]
description = "run type check on code base"
runner = "uv-venv-lock-runner"

[tool.tox.env_run_base]
commands = [
  ["coverage", "run", "--source", "prawcore", "--module", "pytest", "{posargs}"],
  ["coverage", "report", "-m", "--fail-under=100"]
]
dependency_groups = ["test"]
description = "Run test under {base_python}"
pass_env = ["ENSURE_NO_UNUSED_CASSETTES"]
runner = "uv-venv-lock-runner"
